--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <p>
         Новый текст
     </p>
+    <h2>
+        Этот текст мы не хотим пока показывать пользователям
+    </h2>
 </body>
 </html>
