--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <h2>
         Этот текст мы не хотим пока показывать пользователям
     </h2>
+    <p>
+        Новый текст для проверки расширения
+    </p>
 </body>
 </html>
