Добавить новый блок текста Fixes #5

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     <p>
         Новый текст для проверки расширения
     </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, vitae. Placeat harum error culpa nobis cumque alias excepturi cum sequi dolores quod veritatis, mollitia, aliquid dicta debitis repudiandae? Asperiores, beatae.
+    </p>
 </body>
 </html>
